--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2139,9 +2139,10 @@ ul.mj_joblist li a:hover, ul.mj_joblist.nav-tabs > li.active > a, ul.mj_joblist.
 #map {
 	display: block;
 	width: 100%;
-	height: 600px;
+	height: 300px;
 	margin: 0 auto;
 }
+
 #map.large {
 	height: 500px;
 }
@@ -6296,6 +6297,9 @@ ul.mj_selected_content li a{
 }
 .mj_resume_changeing a{
     font-size: 18px;
+}
+.hide-column-names table thead tr {
+    display: none;
 }
 }
 /*----------- responsive css end ---------*/
